--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
         <link href="~/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="~/fonts/iconic/css/material-design-iconic-font.min.css" />*@
 
-    <title>@ViewBag.Title - Peliculiando</title>
+    <title>@ViewBag.Title - Peliculas</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
